Developmental Aphas until further notice.

Complete rewrite of the options table