@@ -1,0 +1,2 @@
+
+This work is dedicated to the public domain.
